feature: added volume info to i3status

--- a/i3status/.config/i3status/config
+++ b/i3status/.config/i3status/config
@@ -7,8 +7,10 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
+        output_format = "i3bar"
         colors = true
-        interval = 5
+        interval = 1
+        "markup" = "pango"
 }
 
 order += "disk /"
@@ -16,6 +18,7 @@ order += "wireless _first_"
 order += "battery all"
 order += "load"
 order += "tztime local"
+order += "volume master"
 
 wireless _first_ {
         format_up = "W: (%quality at %essid) %ip"
@@ -38,3 +41,10 @@ disk "/" {
         format = "%avail"
 }
 
+volume master {
+        format = "<span color='#FFFFFF'>VOL %volume </span>"
+        format_muted = "<span color='#CFAFC8'>MUTED (%volume) </span>"
+        device = "default"
+        mixer = "Master"
+        mixer_idx = 0
+}
