--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -701,7 +701,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #       screen-*|tmux-*)
 #         ;;
 #       *)
-#         tmux set-option -ga terminal-overrides ",*256col*:Tc"
+        set-option -ga terminal-overrides ",*256col*:Tc"
 #         ;;
 #     esac
 #   fi
