--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -9,7 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod4
+set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -46,7 +46,7 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+p exec --no-startup-id i3-dmenu-desktop
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -174,14 +174,14 @@ bindsym $mod+Shift+s exec --no-startup-id ~/dotfiles/bin/monitor
 bindsym $mod+Shift+n exec --no-startup-id ~/dotfiles/bin/resolution
 
 # Notetaking
-for_window [title="notetaker_window"] floating enable
-bindsym $mod+n exec gnome-terminal -e /home/mateuszkowalke/Scripts/notes.sh -t notetaker_window
+# for_window [title="notetaker_window"] floating enable
+# bindsym $mod+n exec gnome-terminal -e /home/mateuszkowalke/Scripts/notes.sh -t notetaker_window
 
 # Emojis (needs rofi preinstalled)
 bindsym $mod+period exec --no-startup-id rofimoji
 
 # Moving workspaces between screens 
-bindsym $mod+p move workspace to output right
+bindsym $mod+comma move workspace to output right
 
 # FKeys
 # Pulse Audio controls
@@ -197,7 +197,7 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightne
 # Alsa audio controls.
 bindsym $mod+Shift+comma exec ~/.config/i3/scripts/alsa restore
 bindsym $mod+semicolon exec ~/.config/i3/scripts/alsa down Headphone
-bindsym $mod+comma exec ~/.config/i3/scripts/alsa up Headphone
+bindsym $mod+colon exec ~/.config/i3/scripts/alsa up Headphone
 bindsym $mod+m move workspace to output left
 
 # Suspend
