refactor: fixed tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,27 +1,49 @@
-unbind r
-bind r source-file ~/.tmux.conf
-
+# setup prefix and switch on mouse support
+# TODO remove mouse support?
 set -g prefix C-a
 set -g mouse on
 
-setw -g mode-keys vi
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+# reload config with prefix-r
+unbind r
+bind r source-file ~/.tmux.conf
 
+# vim keybindings
+setw -g mode-keys vi
+
+# resizing panes with vim keybindings
+bind-key -r h resize-pane -L 5
+bind-key -r j resize-pane -D 5
+bind-key -r k resize-pane -U 5
+bind-key -r l resize-pane -R 5
+
+# maximize current pane - works as a toggle
+bind-key -r m resize-pane -Z
+
+# sane window splitting keybindings
+unbind %
+bind | split-window -h
+
+unbind '"'
+bind - split-window -v
+
+# plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dracula/tmux'
+set -g @plugin 'jimeh/tmux-themepack'
 
-set -g @dracula-show-powerline true
-set -g @dracula-show-flags true
-set -g status-position top
+set -g @themepack 'powerline/block/blue'
+set-option -g status-position top
 
+set -g @resurrect-capture-pane-contents 'on'
+set -g @contiruum-restore 'on'
+
+# copy-paste keybindings
 # use "xsel -i --clipboard" for Xserver and "wl-copy" for Wayland
-bind -T copy-mode    C-C send -X copy-pipe-no-clear "wl-copy"
-bind -T copy-mode-vi y send -X copy-pipe-no-clear "wl-copy"
+bind -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'y' send -X copy-selection
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
