fix: fixed tmux config for colors

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,8 @@
 set -g prefix C-a
 set -g mouse on
 
+set -g default-terminal "screen-256color"
+
 # reload config with prefix-r
 unbind r
 bind r source-file ~/.tmux.conf
