--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,7 @@
 set -g prefix C-a
 set -g mouse on
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 # reload config with prefix-r
 unbind r
