keeping the cwd when splitting in tmux and area selection

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,10 +23,10 @@ bind-key -r m resize-pane -Z
 
 # sane window splitting keybindings
 unbind %
-bind | split-window -h
+bind | split-window -h -c "#{pane_current_path}"
 
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -45,6 +45,7 @@ set -g @contiruum-restore 'on'
 # copy-paste keybindings
 # use "xsel -i --clipboard" for Xserver and "wl-copy" for Wayland
 bind -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'C-v' send -X rectangle-toggle
 bind -T copy-mode-vi 'y' send -X copy-selection
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
