keybindings for nvim and tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,7 +23,7 @@ bind-key -r m resize-pane -Z
 
 # sane window splitting keybindings
 unbind %
-bind | split-window -h -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
 
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
