--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,5 @@
-# setup prefix and switch on mouse support
+# switch on mouse support
 # TODO remove mouse support?
-set -g prefix C-a
 set -g mouse on
 
 set -g default-terminal "tmux-256color"
